nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.stickey: "true"
spec:
  rules:
  - host: nzb.leangeder.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
